--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "random_word_generator" "\0"
+            VALUE "FileDescription", "persistent_random_word_generator" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "random_word_generator" "\0"
+            VALUE "InternalName", "persistent_random_word_generator" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "random_word_generator.exe" "\0"
-            VALUE "ProductName", "random_word_generator" "\0"
+            VALUE "OriginalFilename", "persistent_random_word_generator.exe" "\0"
+            VALUE "ProductName", "persistent_random_word_generator" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
